// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxTabContent customize 1`] = `
<div>
  <div
    class="tab-content bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxTabContent component 1`] = `
<div>
  <div
    class="tab-content"
  >
    Test
  </div>
</div>
`;
